Updated journal entry + files

--- a/cubes/journal/journal.md.html
+++ b/cubes/journal/journal.md.html
@@ -2,6 +2,16 @@
                  **Development Journal**
 
 
+
+2018-08-21: New Section
+=============================================================
+![Scene 2 - Cornell Box](2018-08-21__001__Scene_2_-_Cornell_Box.jpg)
+
+
+
+![Scene 1 - White Cube](2018-08-21__000__Scene_1_-_White_Cube.jpg)
+
+
 2016-08-12: Formatting Notes
 =====================================================
 
