--- a/cubes/journal/journal.md.html
+++ b/cubes/journal/journal.md.html
@@ -3,14 +3,24 @@
 
 
 
-2018-08-21: New Section
+
+2018-09-12: Cubes Question 3 - Stairwell
 =============================================================
+
+![Stairwell](2018-09-12__000.jpg)
+
+Stairwell finished -- 2 hours
+
+
+2018-08-21: Cubes Project Start
+=============================================================
+
 ![Scene 2 - Cornell Box](2018-08-21__001__Scene_2_-_Cornell_Box.jpg)
-
-
 
 ![Scene 1 - White Cube](2018-08-21__000__Scene_1_-_White_Cube.jpg)
 
+
+2 hours so far
 
 2016-08-12: Formatting Notes
 =====================================================
